<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblBandB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/lblBandB"
            android:textColor="@color/black"
            android:textSize="@dimen/lblBandB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHeader" />

        <ImageView
            android:id="@+id/imgBookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_2x"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/lblBandB"
            app:layout_constraintStart_toEndOf="@+id/lblBandB"
            app:layout_constraintTop_toTopOf="@+id/lblBandB" />


        <!-- ESTA VISTA CORRESPONDE A UNA LÍNEA HORIZONTAL -->
        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/lblDate"
            app:layout_constraintStart_toStartOf="@+id/lblBandB"
            app:layout_constraintTop_toBottomOf="@+id/lblBandB" />

        <Button
            android:id="@+id/bttRent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:paddingStart="@dimen/margin_3x"
            android:paddingEnd="@dimen/margin_3x"
            android:text="@string/bttRent"
            app:layout_constraintStart_toStartOf="@+id/lblDate"
            app:layout_constraintTop_toBottomOf="@+id/lblDate" />

        <Button
            android:id="@+id/bttBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingStart="@dimen/margin_3x"
            android:text="@string/bttBuy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bttRent" />

        <View
            android:id="@+id/viewLineButtons"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/gray_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bttRent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbttRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toStartOf="@+id/fbttFamily"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLineButtons"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbttFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_family"
            app:layout_constraintEnd_toStartOf="@+id/fbttPercentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fbttRating"
            app:layout_constraintTop_toTopOf="@+id/fbttRating"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbttPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tomato"
            app:layout_constraintEnd_toStartOf="@+id/fbttSimilar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fbttFamily"
            app:layout_constraintTop_toTopOf="@+id/fbttRating"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbttSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_similar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fbttPercentage"
            app:layout_constraintTop_toTopOf="@+id/fbttRating"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/lblRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/lblRating"
            app:layout_constraintEnd_toStartOf="@+id/lblFamily"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fbttRating" />

        <TextView
            android:id="@+id/lblFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_2x"
            android:text="@string/lblFamily"
            app:layout_constraintEnd_toStartOf="@+id/lblPercentage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblRating"
            app:layout_constraintTop_toTopOf="@+id/lblRating" />

        <TextView
            android:id="@+id/lblPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_2x"
            android:text="@string/lblPercentage"
            app:layout_constraintEnd_toStartOf="@+id/lblSimilar"
            app:layout_constraintStart_toEndOf="@+id/lblFamily"
            app:layout_constraintTop_toTopOf="@+id/lblFamily" />

        <TextView
            android:id="@+id/lblSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_2x"
            android:text="@string/lblSimilar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblPercentage"
            app:layout_constraintTop_toTopOf="@+id/lblPercentage" />

        <View
            android:id="@+id/ViewFloatButtonsLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/gray_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRating" />

        <TextView
            android:id="@+id/lblStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_2x"
            android:paddingEnd="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/lblStory"
            android:textSize="@dimen/lblStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ViewFloatButtonsLine" />

</androidx.constraintlayout.widget.ConstraintLayout>